# fruitchip

./: .clangd  .clangd.in  .gitmodules  CMakeLists.txt  README.md  version.cmake
.github/workflows/: ci.yml
fruitchip-fw/: CMakeLists.txt  pico_flash_region.template.ld
fruitchip-fw-apps/: CMakeLists.txt  build_apps_partition.py
fruitchip-fw-board/: board_configuration.cmake  waveshare-rp2040-tiny.cmake  yd-rp2040.cmake
fruitchip-fw-bootloader/: CMakeLists.txt  pico_flash_region.template.ld
fruitchip-fw-bootloader/include/: binary_info.h
fruitchip-fw-bootloader/src/: main.c  version.h
fruitchip-fw/include/: apps.h  git_version.h.in  settings.h
fruitchip-fw/include/boot_rom/: boot_rom.pio  data_out.h  handler.h  loader.h
fruitchip-fw/include/boot_rom/read/: idle.h
fruitchip-fw/include/boot_rom/write/: configuration.h  disable_next_osdsys_hook.h  flash.h  get_payload.h  idle.h  kv.h  version.h
fruitchip-fw/src/: apps.h  main.c  panic.h  reset.c  reset.h  settings.c
fruitchip-fw/src/boot_rom/: boot_rom.pio  data_out.c  data_out.h  handler.c  handler.h  loader.c.in  loader.h
fruitchip-fw/src/boot_rom/read/: idle.c  osdsys.c  osdsys.h
fruitchip-fw/src/boot_rom/write/: configuration.c  disable_next_osdsys_hook.c  disable_next_osdsys_hook.h  flash.c  flash.h  get_payload.c  get_payload.h  idle.c  read_app.c  read_app.h  test.c  test.h  version.c  version.h
fruitchip-fwfs/: CMakeLists.txt  exports.tab  imports.lst
fruitchip-fwfs/include/: fwfs.h  irx_imports.h
fruitchip-fwfs/src/: fwfs.c  main.c
fruitchip-include/: crc32.h  led_color.h  minmax.h  sleep.h  usleep.h
fruitchip-include/modchip/: apps.h  cmd.h  config.h  errno.h  flash.h  fwfs.h  io.h  settings.h  update.h  version.h
fruitchip-loader/: CMakeLists.txt
fruitchip-loader/ee-stage1/: CMakeLists.txt  linkfile.in
fruitchip-loader/ee-stage1/src/: main.c
fruitchip-loader/ee-stage2/: CMakeLists.txt  linkfile.in
fruitchip-loader/ee-stage2/include/: load_elf.h
fruitchip-loader/ee-stage2/src/: main.c
fruitchip-menu/: CMakeLists.txt
fruitchip-menu/include/: boot_list.h  constants.h  embedded_irx.h  state.h  update.h  utils.h
fruitchip-menu/include/components/: button_guide.h  font.h  list.h
fruitchip-menu/include/input/: pad.h
fruitchip-menu/include/scene/: boot_list.h  boot_options.h  init.h  message.h  settings.h  superscene.h
fruitchip-menu/lib/: uf2.h  wstring.h
fruitchip-menu/src/: apps.c  boot_list.c  embedded_irx.c.in  main.c  pin_config.c  update.c  version.c
fruitchip-menu/src/components/: button_guide.c  font.c  list.c
fruitchip-menu/src/input/: pad.c
fruitchip-menu/src/scene/: boot_list.c  boot_options.c  init.c  message.c  settings.c  settings_about.c  settings_about_update_apps.c  settings_about_update_fw.c  superscene.c
fruitchip-menu/src/scene/settings/update/: checking.c  found.c  rebooting.c  writing.c
loader/ee-stage1/: Makefile  linkfile.in
loader/ee-stage1/src/: main.c
loader/ee-stage1/tools/: embed_stage1_checksum.c
loader/ee-stage2/: Makefile  linkfile.in
loader/ee-stage2/src/: main.c
loader/lib/: modchip.h
src/: apps.h  boot_rom.pio  boot_rom_data_out.c  boot_rom_data_out.h  boot_rom_read_handler.c  boot_rom_read_handler.h  boot_rom_write_handler.c  boot_rom_write_handler.h  loader.h  main.c  reset.c
